# gkrellexec

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Dockerfile  Makefile  README.md  README.textile  SConstruct  gkrellexec.c  gkrellexec.t2t  shippable.yml
.github/workflows/: ci.yml  main.yml
debian/: changelog  control  copyright  rules  watch
